@@ -26,13 +26,13 @@ sub run {
   {
      foreach ( `machinfo` )
      {
-        if ( /Firmware\s+revision\s+[:=]\s+(\S+)/ )
+        if ( /Firmware\s+revision\s?[:=]\s+(\S+)/ )
         {
            $BiosVersion=$1;
         }
-        elsif ( /achine\s+serial\s+number\s+[:=]\s+(\S+)/ )
+        if ( /achine\s+serial\s+number\s?[:=]\s+(\S+)/ )
         {
-	   $SystemSerial=$1;
+	        $SystemSerial=$1;
         }
      }
   }
